# propagators

./: .gitignore  propagators.cabal  stack.yaml
src/: Main.hs
src/Data/Propagator/: Cell.hs  Class.hs  Num.hs  Prop.hs  Supported.hs
src/Examples/: Sudoku4.hs
